<resources>
    <string name="app_name">Számítógép összeállító és összehasonlító</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="passwordAgain">Jelszó mégegyszer</string>
    <string name="Cancel">Mégsem</string>
    <string name="emailRegexPattern">^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="title_activity_builder">BuilderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Főoldal</string>
    <string name="menu_gallery">Gépösszerakó</string>
    <string name="menu_slideshow">Gépösszehasonlító</string>
    <string name="spinnerMotherboard">Alaplap</string>
    <string name="loginGuest">Bejelentkezés vendégként</string>
    <string name="loginGoogle">Google bejelentkezés</string>
    <string name="sszehasonlitoba">Összehasonlítóba</string>
    <string name="peldaszoveg">Peldaszoveg</string>
    <string name="mainActivityName">Bejelentkezés</string>

    <string-array name="part_name_list">
        <item>MSI B450 TOMAHAWK MAX</item>
        <item>MSI B550 TOMAHAWK MAX</item>
        <item>Gigabyte RTX 3090 Ti Gaming OC</item>
        <item>Sapphire RX 6800XT </item>
        <item>Kingston HyperX 16GB 2666Mhz</item>
    </string-array>

    <string-array name="part_type">
        <item>Alaplap</item>
        <item>Alaplap</item>
        <item>VGA</item>
        <item>VGA</item>
        <item>RAM</item>
    </string-array>

    <string-array name="part_weblink">
        <item>https://www.msi.com/Motherboard/B450-TOMAHAWK-MAX</item>
        <item>https://www.msi.com/Motherboard/MAG-B550-TOMAHAWK</item>
        <item>https://www.gigabyte.com/Graphics-Card/GV-N309TGAMING-OC-24GD#kf</item>
        <item>https://www.sapphiretech.com/en/consumer/nitro-radeon-rx-6800-xt-16g-gddr6</item>
        <item>https://www.kingston.com/dataSheets/HX426C16FB3_16.pdf</item>
    </string-array>
</resources>